web/app/themes/cfs/assets/styles/components/_nav.scss
// Primary nav

.container {
  @include media-nav {
    // Space for fixed nav
    margin-top: 84px;
  }
}

// WP admin bar push
.admin-bar {
  .site-header {
    // top: 46px;
    @include media-nav {
      top: 32px;
    }
  }
}

.site-header {
  position: relative;
  height: 80px;

  .brand {
    position: absolute;
    padding: 0;
    margin: 0;
    top: 10px;
    left: mobile-grid(3);
    svg {
      @include theme-color('fill', $white, 'accent');
      width: 47px;
      height: 47px;
    }
  }

  @include max-screen($breakpoint-nav) {
    @include theme-color('background', $red);
    border-left: mobile-grid(2) solid $black;
    border-right: mobile-grid(2) solid $black;
  }

  @include media-nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 10;
    .brand {
      margin-top: 9px;
      font-size: 24px;
      top: 32px;
      left: calc(#{columns(1)} - 52px);
      z-index: 10;
      svg {
        @include theme-color('fill', $red);
        width: 139px;
        height: 139px;
      }
    }
  }
}

.site-nav {
  font: 500 12px/1.5 $font-display;
  letter-spacing: .06875em;
  @extend %smooth;

  .logo-wordmark {
    position: absolute;
    top: 16px;
    left: mobile-grid(10);
    svg {
      @include theme-color('fill', $white, 'accent');
      width: 49px;
      height: 39px;
    }

    @include media-nav {
      top: 0;
      left: columns(1,18);
      svg {
        width: 106px;
        height: 85px;
      }
      z-index: 10;
    }
  }

  a {
    @include theme-color('color', $black, 'accent');
    display: block;
    text-decoration: none;
    padding: grid(3) 0;
    line-height: 24px;
  }
  .brand a,
  .logo-wordmark a {
    padding: 0;
  }

  ul {
    // display: none;
    margin: 0;
    padding: 0;
    li {
      list-style: none;
    }
  }
  & > ul > li {
    position: relative;
  }

  // @include media-md {}

  @include min-screen($breakpoint-nav) {
    width: columns(17);
    @include theme-color('background', $red);
    box-shadow: 0 2px 12px 0 rgba(#000, .5);
    left: auto;
    float: right;
    padding: 0;
    position: relative;
    height: 85px;

    // Black bar at left of nav
    @include bar('left', $black, 17);

    // Show nav
    ul {
      display: block;
      // Hide the dropdown \/ arrows added by js for mobile nav
      a svg {
        display: none;
      }
    }

    a {
      padding: grid(2) 12px;
      color: $white;
      display: inline-block;
      &:hover {
        @include theme-color('color', $yellow, 'accent2');
      }
    }

    // Search and donate have 2px border
    .menu-search a,
    > ul > .menu-donate a {
      margin-left: 8px;
      padding: 7px 30px 5px;
      box-shadow: inset 0px 0px 0px 2px $white;
    }
    .menu-search a {
      margin-left: $gutter;
      text-indent: -9999px;
      position: relative;
      width: 36px;
      padding-left: 0;
      padding-right: 0;
      &:hover {
        svg {
          @include theme-color('fill', $yellow, 'accent2');
        }
      }
      svg {
        display: block;
        position: absolute;
        top: 12px;
        left: 12px;
        width: 12px;
        height: 12px;
        fill: $white;
      }
    }

    .nav {
      padding-left: 0;
      float: right;
      // margin-right: #{$column-width * 20/17};
      margin-right: $gutter;
      @include clearfix;
      > li {
        float: left;
        line-height: 85px;
        &:hover {
          color: $black;
        }
        &:last-of-type {
          padding-right: 0;
        }
      }
    }

    // Default state of drop-down menu
    .sub-menu {
      width: 350px;
      position: absolute;
      height: 0;
      top: -1000px;
      left: 50%;
      margin-left: -175px;
      max-height: none;
      overflow: visible;
      box-shadow: 0 2px 4px 0 rgba(#000, .5);

      li {
        // Stagger display of submenu items
        transition: height 0s steps(1);
        &:nth-child(1) {
          transition-delay: 0s;
        }
        &:nth-child(2) {
          transition-delay: 0.1s;
        }
        &:nth-child(3) {
          transition-delay: 0.15s;
        }
        &:nth-child(4) {
          transition-delay: 0.2s;
        }
        &:nth-child(5) {
          transition-delay: 0.25s;
        }
        height: 0;
        overflow: hidden;
      }
      a {
        display: block;
        padding: 30px 0;
        position: relative;
        &::after {
          content: '';
          display: block;
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          // Give a hard edge to faux dropshadow
          border-top: 1px solid rgba(#000, .25);
          // Faux dropshadow
          background: linear-gradient(to bottom, rgba(0,0,0,0.3) 0%,rgba(0,0,0,0) 100%);
          height: 6px;
        }
      }
      li:first-of-type a {
        &::after {
          height: 12px;
          // Faux dropshadow
          background: linear-gradient(to bottom, rgba(0,0,0,0.2) 0%,rgba(0,0,0,0) 100%);
        }
      }
    }

    // Dropdown menus
    .menu-item-has-children:hover {
      .sub-menu {
        top: 85px;
        height: auto;
        // Chop off dropshadow on top with pseudo element
        &::before {
          content: '';
          position: absolute;
          top: -10px;
          left: -10px;
          width: 370px;
          height: 10px;
          @include theme-color('background', $red);
          pointer-events: none;
        }
        li {
          @include theme-color('background', $red);
          height: 80px;
          text-align: center;
        }
      }
    }

  }
}

// Search form in nav
.nav-search {
  display: none;
  @include media-md {
    float: right;
    margin-right: $gutter;
    width: columns(8);
    padding-top: 24px;
  }
  form input[type=text] {
    @include theme-color('border-color', $white, 'accent');
    @include theme-color('color', $white, 'accent');
    font: 16px/1.5 $font-regular;
    width: columns(5,8);
    float: left;
    &::placeholder {
      @include theme-color('color', $white, 'accent');
    }
    // Search form has no label, padding always the same
    &,
    &:focus,
    &.has-input {
      padding: grid(.25) $gutter grid(1.5) $gutter;
      // Match button sizes
      max-height: 36px;
    }
  }
  // Go search button
  .go-button {
    width: columns(2,8);
    border-radius: 0;
    float: left;
    height: 36px;
    line-height: 30px;
    background: none;
    border: none;
    border: 2px solid $white;
    @include theme-color('border-color', $white, 'accent');
    @include theme-color('color', $white, 'accent');
    &:hover {
      @include theme-color('color', $yellow, 'accent2');
    }
  }
  // Close search button
  .search-close {
    display: block;
    float: right;
    width: 36px;
    height: 36px;
    padding: 0;
    border: 2px solid $white;
    @include theme-color('border-color', $white, 'accent');
    @include theme-color('color', $white, 'accent');
    text-align: center;
    position: relative;
    svg {
      position: absolute;
      top: 10px;
      left: 10px;
      width: 12px;
      height: 12px;
      @include theme-color('fill', $white, 'accent');
    }
    &:hover svg {
      @include theme-color('fill', $yellow, 'accent2');
    }
  }
}

.site-header.search-active {
  #menu-main-nav {
    display: none;
  }
  .nav-search {
    display: block;
  }
}

// Mobile menu toggle
.menu-toggle {
  position: absolute;
  top: 20px;
  right: mobile-grid(3);
  border: 2px solid $white;
  border-radius: 0;
  background: none;
  @extend .font-display;
  @include theme-color('border-color', $white, 'accent');
  @include theme-color('color', $white, 'accent');
  padding: 0 16px;
  height: 36px;
  line-height: 30px;
  svg {
    display: none;
    width: 12px;
    height: 12px;
    @include theme-color('fill', $white, 'accent');
  }

  // Mobile nav is open: hide "Menu" and show "X" svg
  &.menu-open {
    span {
      display: none;
    }
    svg {
      display: block;
    }
  }

  &:focus {
    outline: none;
  }

  @include min-screen($breakpoint-nav) {
    top: auto;
    display: none;
  }
}

// Mobile only styling on #menu-main-nav
@include max-screen($breakpoint-nav) {
  ul#menu-main-nav {
    display: none;
    padding: 120px mobile-grid(3) mobile-grid(3);
    li {
      a {
        display: block;
        line-height: 1.4;
        padding: mobile-grid(2) 0 mobile-grid(1.5);
        border-top: 1px solid $white;
        @include theme-color('border-color', $white, 'accent');
        @include theme-color('color', $white, 'accent');
        svg {
          width: 34px;
          height: 34px;
          // fill: $white;
          @include theme-color('fill', $white, 'accent');
          position: absolute;
          right: 0;
          top: 5px;
          padding: 5px;
          transform: rotate(90deg);
          transition: transform .2s steps(4);
        }
      }
      &.menu-donate a {
        border-bottom: 1px solid $white;
      }
    }
    .menu-search {
      display: none;
    }
    .sub-menu {
      max-height: 0;
      overflow: hidden;
      margin-left: mobile-grid(5);
    }
    li.-active {
      a svg {
        transform: rotate(270deg);
      }
      .sub-menu {
          max-height: none;
      }
    }
  }
  .nav-search {
    position: relative;
    margin: 0 mobile-grid(3);
    form input[type=text] {
      width: 100%;
    }
    .go-button {
      position: absolute;
      top: 0;
      right: 0;
      width: mobile-grid(10);
    }
  }
  body.menu-open {
    overflow: hidden;
    // Show nav-search when mobile nav is open
    .nav-search {
      display: block;
    }
    .search-close {
      display: none;
    }
    .site-header {
      .wrap {
        position: relative;
      }
      position: fixed;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background: $red;
      border-color: $red;
      height: auto;
      z-index: 100;
      overflow-y: scroll;
    }
    &.admin-bar .site-header {
      padding-top: 46px;
    }
    ul#menu-main-nav {
      display: block;
    }
  }
}

